# Haruki-Sekai-API

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  api.py  app.py  configs.example.py  core.py  go.mod  go.sum  haruki-sekai-configs.example.yaml  hypercorn.toml  log_format.py  main.go  main.py  pyproject.toml  schema_info.json  structures.json  utils.go  utils.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  release.yml
Data/accounts/jp/: accounts.json
Data/structures/: master.avsc  nuverse_schema_bundle.example.json  nuverse_schema_bundle.json  structures.json  structures.tw.json  suite.avsc
Modules/: core.py  requirements.txt
Modules/API/: enums.py  tables.py  utils.py
Modules/SekaiClient/: client.py  cryptor.py  exceptions.py  helper.py  manager.py  model.py  nuverse.py
Modules/SekaiMasterUpdater/: apphash.py  compare.py  git.py  master.py  updater.py
api/: api.go  enums.go  image.go  init.go  route.go  utils.go
client/: client_base.go  clientbase.go  clientcall.go  cryptor.go  helper.go  manager.go  model.go  nuverse.go  struct.go  updater.go
config/: config.go
deploy/helm/haruki-sekai-api/: .helmignore  Chart.yaml  values.yaml
deploy/helm/haruki-sekai-api/templates/: _helpers.tpl  deployment-api.yaml  deployment-updater.yaml  ingress.yaml  pvc-accounts.yaml  pvc-master.yaml  service.yaml  serviceaccount.yaml
deploy/k8s/: README.md  all-in-one.yaml
docs/: nuverse-schema-guide.md
http/: client.go
src/: api.rs  bootstrap.rs  client.rs  config.rs  crypto.rs  db.rs  error.rs  ingest_engine.rs  lib.rs  logging.rs  main.rs  models.rs  storage.rs  updater.rs  utils.rs
src/api/: api.rs  apis.rs  image.rs  middleware.rs  mod.rs  routes.rs
src/client/: account.rs  helper.rs  manager.rs  nuverse.rs  nuverse_schema.rs  sekai_client.rs  session.rs  token_utils.rs
src/crypto/: sekai_cryptor.rs
src/db/: entity.rs
src/db/entity/: sekai_user.rs  sekai_user_server.rs  universal_music.rs
src/models/: areaitemlevels.rs  areaitems.rs  areas.rs  bonds.rs  bondshonors.rs  boostitems.rs  cardcostume3ds.rs  cardepisodes.rs  cardmysekaicanvasbonuses.rs  cardrarities.rs  cards.rs  cardsupplies.rs  challengelivehighscorerewards.rs  character2ds.rs  characterarchivemysekaicharactertalkgroups.rs  charactermissionv2parametergroups.rs  characterranks.rs  cheerfulcarnivalteams.rs  costume3ds.rs  custommusicscoretags.rs  eventcards.rs  eventdeckbonuses.rs  eventexchangesummaries.rs  eventitems.rs  eventmusics.rs  eventraritybonusrates.rs  events.rs  eventstories.rs  eventstoryunits.rs  gachaceilitems.rs  gachas.rs  gachatickets.rs  gamecharacters.rs  gamecharacterunits.rs  honorgroups.rs  honors.rs  levels.rs  limitedtimemusics.rs  masterlessons.rs  music_artists.rs  (+52 more)
src/universal_master/: area.rs  area_item.rs  area_item_level.rs  bond.rs  bonds_honor.rs  boost_item.rs  card.rs  card_costume3d.rs  card_episode.rs  card_mysekai_canvas_bonus.rs  card_rarity.rs  card_supply.rs  challenge_live_high_score_reward.rs  character2d.rs  character_archive_mysekai_character_talk_group.rs  character_mission_v2_parameter_group.rs  character_rank.rs  cheerful_carnival_team.rs  costume3d.rs  event.rs  event_card.rs  event_deck_bonus.rs  event_exchange_summary.rs  event_item.rs  event_music.rs  event_rarity_bonus_rate.rs  event_story.rs  event_story_unit.rs  gacha.rs  gacha_ceil_item.rs  gacha_ticket.rs  game_character.rs  game_character_unit.rs  honor.rs  honor_group.rs  level.rs  limited_time_music.rs  loader.rs  master_lesson.rs  merger.rs  (+43 more)
src/updater/: apphash.rs  git.rs  master.rs  scheduler.rs
tools/ent_generator/: Cargo.toml
tools/ent_generator/src/: main.rs
tools/nuverse_schema_generator/: Program.cs
updater/: apphash.go  compare.go  git.go  master.go
utils/: git.go  struct.go  utils.go
utils/apphash/: apphash.go
utils/git/: git.go
