[package]
name = "haruki-sekai-api"
version = "6.0.0"
edition = "2021"
authors = ["Haruki Dev Team"]
description = "Haruki Sekai API - Rust Edition"
rust-version = "1.70"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
axum = { version = "0.8.8", features = ["macros"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json", "gzip", "brotli", "query", "http2"] }
sonic-rs = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.33"
indexmap = { version = "2.13.0", features = ["serde"] }
rmp-serde = "1.3.1"
rmpv = "1.3.1"
aes = "0.8"
cbc = { version = "0.1.2", features = ["alloc"] }
hex = "0.4.3"
base64 = "0.22.1"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
sea-orm = { version = "2.0.0-rc.28", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
tokio-cron-scheduler = "0.15.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
parking_lot = "0.12.5"
regex = "1.12.2"
chrono = "0.4.43"
num_enum = "0.7"
notify = "6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
