[package]
name = "haruki-sekai-api"
version = "6.0.0"
edition = "2021"
authors = ["Haruki Dev Team"]
description = "Haruki Sekai API - Rust Edition"
rust-version = "1.85"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "gzip", "brotli", "query", "http2"] }
sonic-rs = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
indexmap = { version = "2", features = ["serde"] }
rmp-serde = "1"
rmpv = "1"
aes = "0.9"
cbc = { version = "0.2", features = ["alloc"] }
hex = "0.4"
base64 = "0.22"
serde_json = { version = "1", features = ["preserve_order"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
sea-orm = { version = "2.0.0-rc.40", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
tokio-cron-scheduler = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
regex = "1"
chrono = "0.4"
num_enum = "0.7"
notify = "9.0.0-rc.4"
figment = { version = "0.10", features = ["yaml", "env"] }
opendal = { version = "0.57", default-features = false, features = ["reqwest-rustls-tls", "executors-tokio", "services-fs", "services-s3", "services-oss", "services-cos", "services-gcs", "services-azblob", "services-obs"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
