[project]
name = "Haruki-Sekai-API"
version = "4.2.1"
description = "An unofficial API proxy project for Project Sekai"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "aiopath>=0.7.7",
    "apscheduler>=3.11.0",
    "coloredlogs>=15.0.1",
    "cryptography>=45.0.6",
    "fastapi>=0.116.1",
    "hypercorn>=0.17.3",
    "msgpack>=1.1.1",
    "orjson>=3.11.2",
    "pydantic>=2.11.7",
    "pygit2>=1.18.2",
    "pyjwt>=2.10.1",
    "redis>=6.4.0",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "W", # pycodestyle warnings
    "E", # pycodestyle errors
    "I", # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "E402", # module-import-not-at-top-of-file
    "UP037", # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["nonebot", "tests/*"]
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
